Rename CI workflow, add unit tests & deps
Rename .github/workflows/audio-smoke-test.yml to ci.yml and restructure CI: bump Node to 20, add a unit-tests job that installs deps (npm ci) and runs unit tests (npm run test:unit), then run the smoke job depending on unit-tests. Update package.json and package-lock (adding vitest, three, and related test tooling) and add new unit test files for car, level, and newt under tests/unit/.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Audio smoke tests
+name: Run tests
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
       - '.github/workflows/**'
 
 jobs:
-  audio-smoke:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,7 +19,25 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Run unit tests
+        run: npm run test:unit
+
+  smoke:
+    needs: unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
       - name: Install deps
         run: npm ci
