Refine Playwright test config and CI job name
Rename CI step from 'Run audio smoke tests (Playwright)' to 'Run smoke tests (Playwright)'. Update playwright.config.js to only match '**/*.spec.js' and ignore tests in '**/unit/**', ensuring CI runs the intended smoke/e2e Playwright tests and excludes unit tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Run audio smoke tests (Playwright)
+      - name: Run smoke tests (Playwright)
         run: npm test
         env:
           CI: true
